# chat_app

client/: CMakeLists.txt  addressclient.cpp  addressclient.hpp  chatclient.cpp  chatclient.hpp  main.cpp  run.sh
lib/: addressinfo.hpp  memoryinputstream.cpp  memoryinputstream.hpp  memoryoutputstream.cpp  memoryoutputstream.hpp  netpacket.cpp  netpacket.hpp  socketaddress.cpp  socketaddress.hpp  tcpsocket.cpp  tcpsocket.hpp  types.hpp  udpsocket.cpp  udpsocket.hpp
server/: CMakeLists.txt  addressclient.cpp  addressclient.hpp  addressserver.cpp  addressserver.hpp  main.cpp  run.sh
